Replacing Runtime() with Processbuilder()