@@ -11,6 +11,7 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
+import io.meterian.jenkins.core.Meterian;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Scope;
@@ -100,6 +101,22 @@ public class Shell {
     }
     
     public static class Task {
+        public static void main(String[] args) throws IOException {
+            String[] commands = new String[]{
+                    "java",
+                    "-Dcli.param.folder=/Users/swami/git-repos/meterian/jenkins-plugin/work/workspace/TestMeterianPlugin-Freestyle-autofix",
+                    "-jar",
+                    "/Users/swami/.meterian/meterian-cli.jar", "--interactive=false"};
+
+            Meterian.Result result = new Meterian.Result();
+            Shell shell = new Shell();
+
+            Task task = shell.exec(commands, new Options());
+            task.waitFor();
+            result.exitCode = task.exitValue();
+
+            System.out.println(result.exitCode);
+        }
 
         public static final long DEFAULT_TIMEOUT_IN_SECONDS = 60L*5L;
 
@@ -166,14 +183,24 @@ public class Shell {
             log.debug("Running shell commmand {} with options {}",Arrays.asList(commands), options);
 
         Process process;
-        if (options.workingFolder == null)
-            process = Runtime.getRuntime().exec(commands, options.envp());
-        else
-            process = Runtime.getRuntime().exec(commands, options.envp(), options.workingFolder);
+        ProcessBuilder processBuilder = new ProcessBuilder(commands);
+        processBuilder.environment().values().addAll(options.envps);
+
+//        if (options.workingFolder == null)
+//            process = Runtime.getRuntime().exec(commands, options.envp());
+//        else
+//            process = Runtime.getRuntime().exec(commands, options.envp(), options.workingFolder);
+        if (options.workingFolder != null) {
+            processBuilder.directory(options.workingFolder);
+        }
+        process = processBuilder.start();
 
         Task task =  new Task(process);
         threadPool.execute(new StreamGobbler(process.getInputStream(), "STDOUT", options.outputGobbler, task.ioLatch));
         threadPool.execute(new StreamGobbler(process.getErrorStream(), "STDERR", options.errorGobbler, task.ioLatch));
+        File outputlog = new File("/tmp/log.txt");
+        processBuilder.redirectErrorStream(true);
+        processBuilder.redirectOutput(ProcessBuilder.Redirect.appendTo(outputlog));
         return task;
     }
 }
